# Sentinel-Mini

./: Cargo.toml  RAEADME.md
src/: lib.rs
src/app/: mod.rs  state.rs
src/drivers/: battery.rs  buzzer.rs  mod.rs  oled.rs  touch.rs
src/storage/: logger.rs
src/ui/: menu.rs
