[package]
edition      = "2024"
name         = "sentinel-mini"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "sentinel-mini"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

# OLED
ssd1306 = "0.10.0"
embedded-graphics = "0.8.2"

# Traits
embedded-hal = "1.0.0"

# Fixed-capacity collections
heapless = "0.9.3"

esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

critical-section = "1.2.0"
esp-alloc = "0.10.0"

# Logging
defmt                  = "1.0.1"
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32c3"] }

esp-nvs = { version = "0.4.0", features = ["esp32c3"] }
esp-storage = { version = "0.8.1", features = ["esp32c3"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
